added travis file for real

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ services:
 
 before_install:
   - docker build -t cofc/docker-react-grider-public -f Dockerfile.dev
+
+script:
+  - docker run -e CI=true cofc/docker-react-grider-public npm run test
