--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t cofc/docker-react-grider-public -f Dockerfile.dev
+  - docker build -t cofc/docker-react-grider-public -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true cofc/docker-react-grider-public npm run test
