--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,6 @@ deploy:
   bucket_name: "elasticbeanstalk-us-east-2-880874484397"
   bucket_path: "docker-react-grider-public"
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_key:
-    secure: "$AWS_SECRET_KEY"
+  secret_access_key: $AWS_SECRET_KEY
   on:
     branch: master
